--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -203,7 +203,7 @@ li a:hover {
       </ul>
       <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-user"></i>{{username}}
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-user"></i>{{username}}{{session['hasura_id']}}
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">Dashboard</a></li>
