--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -393,98 +393,14 @@ fetch(url, requestOptions)
 	return response.json();
 })
 .then(function(result) {
-
+	console.log(result);
 	for (i=0;i<=result.length;i++) {
 
       $('#ul1 > ulbody').append('<li> <a href="#">' + result[i]['gname'] +  '</li></a>');
 
 }
-})
-.catch(function(error) {
-	console.log('Request Failed:' + error);
-});
-
-var url = "https://data.octagon58.hasura-app.io/v1/query";
-
-// If you have the auth token saved in offline storage, obtain it in async componentDidMount
-// var authToken = await AsyncStorage.getItem('HASURA_AUTH_TOKEN');
-// And use it in your headers
-// headers = { "Authorization" : "Bearer " + authToken }
-var requestOptions = {
-    "method": "POST",
-    "headers": {
-        "Content-Type": "application/json",
-        "Authorization": "Bearer c6fd65b8291402d919b7e940069cdd655109daa75b970967"
-    }
-};
-
-
-var body = {
-    "type": "select",
-    "args": {
-        "table": "group_member",
-        "columns": [
-            "gid"
-        ],
-        "where": {
-            "uid": {
-                "$eq": {{session['hasura_id']}}
-            }
-        }
-    }
-};
-
-
-
-requestOptions.body = JSON.stringify(body);
-
-fetchAction(url, requestOptions)
-.then(function(response) {
-	return response.json();
-})
-.then(function(result) {
-
-
-	for (i=0;i<=result.length;i++) {
-
-        var body = {
-    "type": "select",
-    "args": {
-        "table": "group",
-        "columns": [
-            "gname",
-            "gid"
-        ],
-        "where": {
-            "gid": {
-                "$eq": result[i]['gid']
-            }
-        }
-    }
-};
-
-requestOptions.body = JSON.stringify(body);
-
-fetchAction(url, requestOptions)
-.then(function(response) {
-	return response.json();
-})
-.then(function(result) {
-
-for (i=0;i<=result.length;i++) {
-
-      $('#ul1 > ulbody').append('<li> <a href="#">' + result[i]['gname'] +  '</li></a>');
-
-}
 
 })
-}
-
-
-})
-
-
-
 .catch(function(error) {
 	console.log('Request Failed:' + error);
 });
