--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -373,7 +373,7 @@ var requestOptions = {
 var body = {
     "type": "select",
     "args": {
-        "table": "group",
+        "table": "group_member",
         "columns": [
             "gname",
             "gid"
