--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -292,7 +292,7 @@ li a:hover {
     <h3>Select As Friend </h3>
   <br>
 
-<table>    {% for i in all_friend %}
+<table>    {% for i in session['all_friend'] %}
 
   <tr valign="middle"><td>{{i}} </td><td> <a href=https://app.octagon58.hasura-app.io/add_friend_all?uname={{i}}>+add friend</a></td>
 
