--- a/microservices/app/src/templates/update_email.html
+++ b/microservices/app/src/templates/update_email.html
@@ -345,7 +345,7 @@ input[type=email]:focus {
       </div>
     <div class="col-sm-8 text-left">
 
-<form>
+<form action="https://app.octagon58.hasura-app.io/change_email" method="post">
   <label for="fname"><h1>Enter Your New Email</h1></label>
   <input type="email" id="fname" name="email" required><br>
   <input type="submit" value="Change Email">
