--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -586,5 +586,6 @@ window.onclick = function(event) {
             </script>
                {% endfor %}
           {% endwith %}
+{% message=None%}
 
 </html>
