--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -113,9 +113,9 @@ div.a1{
 
 .avatar {
     vertical-align: middle;
-    width: 20px;
-    height: 20px;
-    border-radius: 30%;
+    width: 25px;
+    height: 25px;
+    border-radius: 35%;
 }
 ul {
     list-style-type: none;
@@ -210,7 +210,7 @@ li a:hover {
       </ul>
       <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-user"></i><img src="static/image/1.png" alt="Avatar" class="avatar">{{session['username']}}
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><img src="static/image/1.png" alt="Avatar" class="avatar">{{session['username']}}
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="https://app.octagon58.hasura-app.io/dashboard">Dashboard</a></li>
