--- a/microservices/app/src/templates/update_email.html
+++ b/microservices/app/src/templates/update_email.html
@@ -239,8 +239,8 @@ input[type=email]:focus {
         <ul class="dropdown-menu">
           <li><a href="https://app.octagon58.hasura-app.io/dashboard">Dashboard</a></li>
           <li><a href="https://app.octagon58.hasura-app.io/update_email">Update Email</a></li>
-          <li><a href="#">Update Mobile No</a></li>
-          <li><a href="#">Update password</a></li>
+          <li><a href="https://app.octagon58.hasura-app.io/update_mobile">Update Mobile No</a></li>
+          <li><a href="https://app.octagon58.hasura-app.io/update_password">Update password</a></li>
           <li><a href="https://app.octagon58.hasura-app.io/logout_user">Logout</a></li>
         </ul>
       </li>
