--- a/microservices/app/src/templates/update_password.html
+++ b/microservices/app/src/templates/update_password.html
@@ -239,8 +239,8 @@ input[type=email]:focus {
         <ul class="dropdown-menu">
           <li><a href="https://app.octagon58.hasura-app.io/dashboard">Dashboard</a></li>
           <li><a href="https://app.octagon58.hasura-app.io/update_email">Update Email</a></li>
-          <li><a href="#">Update Mobile No</a></li>
-          <li><a href="#">Update password</a></li>
+         <li><a href="https://app.octagon58.hasura-app.io/update_mobile">Update Mobile No</a></li>
+          <li><a href="https://app.octagon58.hasura-app.io/update_password">Update password</a></li>
           <li><a href="https://app.octagon58.hasura-app.io/logout_user">Logout</a></li>
         </ul>
       </li>
@@ -346,8 +346,10 @@ input[type=email]:focus {
     <div class="col-sm-8 text-left">
 
 <form action="https://app.octagon58.hasura-app.io/change_email" method="post">
+  <label for="f"><h1>Enter Your old password.</h1></label>
+  <input type="password" id="f" name="old_password" minlength="8" required><br>
   <label for="fname"><h1>Enter Your New password.</h1></label>
-  <input type="password" id="fname" name="password" minlength="8" required><br>
+  <input type="password" id="fname" name="new_password" minlength="8" required><br>
   <input type="submit" value="Change Password">
 
 </form>
