--- a/microservices/app/src/templates/update_mobile.html
+++ b/microservices/app/src/templates/update_mobile.html
@@ -345,10 +345,10 @@ input[type=email]:focus {
       </div>
     <div class="col-sm-8 text-left">
 
-<form action="https://app.octagon58.hasura-app.io/change_email" method="post">
+<form action="https://app.octagon58.hasura-app.io/change_mobile" method ="post">
   <label for="fname"><h1>Enter Your New Mobile No.</h1></label>
   <input type="number" id="fname" name="mobile" maxlength="10" required><br>
-  <input type="submit" value="Change Mobile no">
+ <pre>                      <input type="submit" value="Change Mobile no"></pre>
 
 </form>
     </div>
