--- a/microservices/app/src/templates/update_mobile.html
+++ b/microservices/app/src/templates/update_mobile.html
@@ -198,7 +198,7 @@ li a:hover {
     margin: 4px 2px;
     cursor: pointer;
 }
-input[type=email] {
+input[type=email]input[type=number] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -348,7 +348,7 @@ input[type=email]:focus {
 <form action="https://app.octagon58.hasura-app.io/change_mobile" method ="post">
   <label for="fname"><h1>Enter Your New Mobile No.</h1></label>
   <input type="number" id="fname" name="mobile" maxlength="10" required><br>
- <pre>                      <input type="submit" value="Change Mobile no"></pre>
+          <center>             <input type="submit" value="Change Mobile no"></center>
 
 </form>
     </div>
