--- a/microservices/app/src/templates/update_password.html
+++ b/microservices/app/src/templates/update_password.html
@@ -198,7 +198,7 @@ li a:hover {
     margin: 4px 2px;
     cursor: pointer;
 }
-input[type=email] {
+input[type=password] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -345,7 +345,7 @@ input[type=email]:focus {
       </div>
     <div class="col-sm-8 text-left">
 
-<form action="https://app.octagon58.hasura-app.io/change_email" method="post">
+<form action="https://app.octagon58.hasura-app.io/change_pass" method="post">
   <label for="f"><h1>Enter Your old password.</h1></label>
   <input type="password" id="f" name="old_password" minlength="8" required><br>
   <label for="fname"><h1>Enter Your New password.</h1></label>
