--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -217,6 +217,7 @@ li a:hover {
           <li><a href="https://app.octagon58.hasura-app.io/update_email">Update Email</a></li>
           <li><a href="https://app.octagon58.hasura-app.io/update_mobile">Update Mobile No</a></li>
           <li><a href="https://app.octagon58.hasura-app.io/update_password">Update password</a></li>
+            <li><a href="https://app.octagon58.hasura-app.io/update_profile">Update profile pic</a></li>
           <li><a href="https://app.octagon58.hasura-app.io/logout_user">Logout</a></li>
         </ul>
       </li>
