--- a/microservices/app/src/templates/update_password.html
+++ b/microservices/app/src/templates/update_password.html
@@ -113,9 +113,9 @@ div.a1{
 
 .avatar {
     vertical-align: middle;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    border-radius: 30%;
 }
 ul {
     list-style-type: none;
@@ -241,6 +241,7 @@ input[type=email]:focus {
           <li><a href="https://app.octagon58.hasura-app.io/update_email">Update Email</a></li>
          <li><a href="https://app.octagon58.hasura-app.io/update_mobile">Update Mobile No</a></li>
           <li><a href="https://app.octagon58.hasura-app.io/update_password">Update password</a></li>
+            <li><a href="https://app.octagon58.hasura-app.io/update_profile">Update profile pic</a></li>
           <li><a href="https://app.octagon58.hasura-app.io/logout_user">Logout</a></li>
         </ul>
       </li>
