--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -210,7 +210,7 @@ li a:hover {
       </ul>
       <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><img src="static/image/1.jpg" alt="Avatar" class="avatar">{{session['username']}}
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><img src="https://filestore.octagon58.hasura-app.io/v1/file/{{session['hasura_id']}}" alt="Avatar" class="NOIMAGE">{{session['username']}}
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="https://app.octagon58.hasura-app.io/dashboard">Dashboard</a></li>
