--- a/microservices/app/src/templates/update_password.html
+++ b/microservices/app/src/templates/update_password.html
@@ -234,7 +234,7 @@ input[type=email]:focus {
       </ul>
       <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-user"></i><img src="static/image/1.png" alt="Avatar" class="avatar">{{session['username']}}
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><img src="https://filestore.octagon58.hasura-app.io/v1/file/{{session['hasura_id']}}" alt="Avatar" class="avatar" onerror="standby()">{{session['username']}}
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="https://app.octagon58.hasura-app.io/dashboard">Dashboard</a></li>
@@ -592,6 +592,11 @@ window.onclick = function(event) {
         modal1.style.display = "none";
     }
 }
+
+function standby() {
+    document.getElementById('foo').src = 'static/image/img_avatar.png'
+    }
+
 
 </script>
 </body>
