--- a/microservices/app/src/templates/update_email.html
+++ b/microservices/app/src/templates/update_email.html
@@ -234,7 +234,7 @@ input[type=email]:focus {
       </ul>
       <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><img src="https://filestore.octagon58.hasura-app.io/v1/file/{{session['hasura_id']}}" alt="Avatar" class="avatar" onerror="standby()">{{session['username']}}
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><img id="foo" src="https://filestore.octagon58.hasura-app.io/v1/file/{{session['hasura_id']}}" alt="Avatar" class="avatar" onerror="standby()">{{session['username']}}
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="https://app.octagon58.hasura-app.io/dashboard">Dashboard</a></li>
