--- a/microservices/app/src/templates/update_profile.html
+++ b/microservices/app/src/templates/update_profile.html
@@ -345,12 +345,7 @@ input[type=email]:focus {
 </ul>
       </div>
     <div class="col-sm-8 text-left">
-
-<form action="https://app.octagon58.hasura-app.io/change_profile" method="post" enctype = "multipart/form-data">
-  <label for="fname"><h1>Select profile pic</h1></label>
-  <input type="file" id="fname" name="file" multiple accept='image/*' required><br>
-  <input type="submit" value="Change picture">
-    {%with messages = get_flashed_messages() %}
+         {%with messages = get_flashed_messages() %}
           {% for message in messages %}
 
              <script type="text/javascript">
@@ -358,6 +353,12 @@ input[type=email]:focus {
             </script>
                {% endfor %}
           {% endwith %}
+
+<form action="https://app.octagon58.hasura-app.io/change_profile" method="post" enctype = "multipart/form-data">
+    <label for="fname"><h1>Select profile pic</h1><p>(max file size <=1MB)</p></label>
+  <input type="file" id="fname" name="file" multiple accept='image/*' required><br>
+  <input type="submit" value="Change picture">
+
 
 </form>
     </div>
