--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -254,7 +254,7 @@ li a:hover {
     <form action="https://app.octagon58.hasura-app.io/make_group" method="post">
 
       Enter Group Name:: <input type="text" name="gname" placeholder="Group Name" required>
-      Select Group Member
+        <br>      Select Group Member
       <table id="table1">
 
             <tbody></tbody>
@@ -279,10 +279,10 @@ li a:hover {
       <div >
         <button id="myBtn">+Add friends</button><h4><u>My Friends</u></h4>
 
-        <ul id="ul">
-          <ulbody>
-        </ulbody>
-        </ul>
+        <table id="t1">
+          <tbody>
+        </tbody>
+        </table>
 
         <hr>
 <div id="myModal" class="modal">
@@ -512,7 +512,7 @@ fetch(url, requestOptions)
 
       $('#table1 > tbody').append('<tr valign="middle"><td><input type="checkbox" name="addfriend" value="'+result[i]['friend_id']+'"></td> <td valign="center">' + result[i]['username'] +  '</td></tr>');
 
-      $('#ul > ulbody').append('<li><i class="glyphicon glyphicon-user"></i> ' + result[i]['username'] + ' </li><a href="https://app.octagon58.hasura-app.io/remove_friend?username='+result[i]['username']+'">Remove</a><br>');
+      $('#t1 > ulbody').append('<tr><td><i class="glyphicon glyphicon-user"></i> ' + result[i]['username'] + ' </td><td><a href="https://app.octagon58.hasura-app.io/remove_friend?username='+result[i]['username']+'">Remove</a></td></tr><br>');
 
 }
 
