--- a/microservices/app/src/templates/update_password.html
+++ b/microservices/app/src/templates/update_password.html
@@ -262,10 +262,10 @@ input[type=email]:focus {
        <div >
         <button id="myBtn1">+Add Group</button><h4><u><i class="fa fa-group"></i> </i>My Groups</u></h4>
 
-        <ul id="ul1">
-          <ulbody>
-        </ulbody>
-        </ul>
+        <table id="tab">
+          <tbody>
+        </tbody>
+        </table>
          <br>
          </div>
 <div id="myModal1" class="modal">
@@ -528,7 +528,7 @@ fetch(url, requestOptions)
 
       $('#table1 > tbody').append('<tr valign="middle"><td><input type="checkbox" name="addfriend" value="'+result[i]['friend_id']+'"></td> <td valign="center">' + result[i]['username'] +  '</td></tr>');
 
-      $('#ul > ulbody').append('<li> <a href=""#><i class="glyphicon glyphicon-user"></i> ' + result[i]['username'] +  '</li></a>');
+      $('#tab > tbody').append('<tr ><td align="left" bgcolor="#ccccff"><i class="glyphicon glyphicon-user"></i> ' + result[i]['username'] + ' </td><td align="right"><a href="https://app.octagon58.hasura-app.io/remove_friend?username='+result[i]['username']+'">Remove</a></td></tr><br>');
 
 }
 
